--- a/index.html
+++ b/index.html
@@ -7,16 +7,30 @@
     <title>Minha página de teste</title>
   </head>
 
-
   <body onload="typeWriter()">
     <header>
-        <aside>
-            <img src="imgs/me.png" alt="Lucas Rodrigues olhando para a câmera.">
-        </aside>
+      <div  class="circle"></div>
+        <img src="imgs/me.png" alt="Lucas Rodrigues olhando para a câmera.">
         <div class="headerTitle">
             <h1 id="text"></h1>
         </div>
+        <div class="headerNav" id="headerNavBar">
+          <nav>
+            <ul>
+                <li>
+                    Home
+                </li>
+                <li>
+                    Projetos
+                </li>
+                <li>
+                  Experiência
+                </li>
+            </ul>
+          </nav>
+        </div>
     </header>
+    <div class="content"></div>
   </body>
 
 </html> 
