adds onclick in 'Home' and 'Projetos' buttons

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <script type="text/javascript" src="scripts/index.js"></script>
-    <title>Minha página de teste</title>
+    <title>Home</title>
   </head>
 
   <body onload="typeWriter()">
@@ -17,20 +17,22 @@
         <div class="headerNav" id="headerNavBar">
           <nav>
             <ul>
-                <li>
+                <li class="headerLi">
                     Home
                 </li>
-                <li>
+                <li class="headerLi">
                     Projetos
                 </li>
-                <li>
-                  Experiência
+                <li class="headerLi">
+                    Experiência
                 </li>
             </ul>
           </nav>
         </div>
     </header>
-    <div class="content"></div>
+    <div class="content">
+      Me chamo Lucas,
+    </div>
   </body>
 
 </html> 
