deleteds an unused html file

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="scripts/index.js"></script>
-    <title>Home</title>
+    <title>Lucas Rodrigues</title>
   </head>
 
   <body onload="typeWriter()">
