fixes some error found in w3c validator and changes the website's title

--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt">
   <head>
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="styles/style.css">
     <link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="scripts/index.js"></script>
+    <script src="scripts/index.js"></script>
     <title>Lucas Rodrigues</title>
   </head>
 
   <body onload="typeWriter()">
     <header>
-        <div class="headerTitle">
-            <h1 id="text"></h1>
-        </div>
         <div class="headerNav" id="headerNavBar">
           <nav>
             <ul>
@@ -36,10 +33,10 @@
 
     <div class="content">
       <section class="intro" id="#intro">
-        <img src="imgs/me.png">
+        <img src="imgs/me.png" alt="Lucas Rodrigues olhando para a câmera.">
         <p>Me chamo Lucas, tenho 20 anos e sou estudante de Ciência da Computação na Universidade Federal de Pernambuco, atualmente no 4º período.
           Atualmente, tenho atuado como <b>desenvolvedor Android</b> e também estudado <b>desenvolvimento Web</b>.
-          Amo gatos, um cafézinho e um código no fim da tarde <i class="em em-smiling_face_with_3_hearts" aria-role="presentation" aria-label="SMILING FACE WITH SMILING EYES AND THREE HEARTS"></i>.</p>
+          Amo gatos, um cafézinho e um código no fim da tarde.<i class="em em-smiling_face_with_3_hearts" aria-label="Emoji sorrindo com corações."></i></p>
         </section>
 
       <section class="projects" id="projects">
@@ -112,7 +109,7 @@
     </div>
     <section id="contact">
       <div class="contact">
-        <a href="mailto:lrsv@cin.ufpe.br" target="_blank"><i class="fa fa-2x fa-envelope-o" href="www.google.com"></i></a>
+        <a href="mailto:lrsv@cin.ufpe.br" target="_blank"><i class="fa fa-2x fa-envelope-o"></i></a>
         <a href="https://www.linkedin.com/in/lucas-rodrigues-37127b180/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a>
         <a href="https://github.com/lucasrsv" target="_blank"><i class="fa fa-2x fa-github"></i></a>
       </div>
