--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
   <body onload="typeWriter()">
     <header>
+        <div class="headerTitle">
+            <h1 id="text"></h1>
+        </div>
         <div class="headerNav" id="headerNavBar">
           <nav>
             <ul>
@@ -33,10 +36,10 @@
 
     <div class="content">
       <section class="intro" id="#intro">
-        <img src="imgs/me.png" alt="Lucas Rodrigues olhando para a câmera.">
+        <img src="imgs/me.png" alt="Lucas Rodrigues sentado, sorrindo para a foto.">
         <p>Me chamo Lucas, tenho 20 anos e sou estudante de Ciência da Computação na Universidade Federal de Pernambuco, atualmente no 4º período.
-          Tenho atuado como <b>desenvolvedor Android</b> e também estudado <b>desenvolvimento Web</b>.
-          Amo gatos, um cafézinho e um código no fim da tarde.<i class="em em-smiling_face_with_3_hearts" aria-label="Emoji sorrindo"></i></p>
+          Atualmente, tenho atuado como <b>desenvolvedor Android</b> e também estudado <b>desenvolvimento Web</b>.
+          Amo gatos, um cafézinho e um código no fim da tarde <i class="em em-smiling_face_with_3_hearts" aria-label="Emoji sorrindo com três corações ao redor."></i>.</p>
         </section>
 
       <section class="projects" id="projects">
@@ -109,7 +112,7 @@
     </div>
     <section id="contact">
       <div class="contact">
-        <a href="mailto:lrsv@cin.ufpe.br" target="_blank"><i class="fa fa-2x fa-envelope-o" href="www.google.com"></i></a>
+        <a href="mailto:lrsv@cin.ufpe.br" target="_blank"><i class="fa fa-2x fa-envelope-o"></i></a>
         <a href="https://www.linkedin.com/in/lucas-rodrigues-37127b180/" target="_blank"><i class="fa fa-2x fa-linkedin"></i></a>
         <a href="https://github.com/lucasrsv" target="_blank"><i class="fa fa-2x fa-github"></i></a>
       </div>
