adds node, lite dependency and more skills

--- a/index.html
+++ b/index.html
@@ -42,18 +42,20 @@
           Amo gatos, um cafézinho e um código no fim da tarde <i class="em em-smiling_face_with_3_hearts" aria-label="Emoji sorrindo com três corações ao redor."></i>.</p>
         </section>
 
+        <div class="sectionTitle" id="projectsSection">
+          <h1>Projetos</h1>
+        </div>
       <section class="projects" id="projects">
- 
-      <div class="project">
-        <a href="https://www.instagram.com/alemdacura" target="_blank">
-          <img src="imgs/alemdacura.png" alt="Além da Cura.">
-        </a>
-        <p class="projectDescription">O <b>Além da Cura</b> é um projeto voluntário que já entrevistou 50 mulheres mulheres com câncer, em 9 países, nos 5 continentes,
-          e estamos nos preparando para lançarmos um documentário com todas elas! <br>
-          Entrei no projeto em março de 2019, inicialmente como desenvolvedor Web e legendário, mas hoje trabalho principalmente na área de comunicação e redes sociais.
-          Além disso, também trabalho como tradutor das entrevistas em inglês. <br> <br> <br> 
-        </p>
-      </div>
+        <div class="project">
+          <a href="https://www.instagram.com/alemdacura" target="_blank">
+            <img src="imgs/alemdacura.png" alt="Além da Cura.">
+          </a>
+          <p class="projectDescription">O <b>Além da Cura</b> é um projeto voluntário que já entrevistou 50 mulheres mulheres com câncer, em 9 países, nos 5 continentes,
+            e estamos nos preparando para lançarmos um documentário com todas elas! <br>
+            Entrei no projeto em março de 2019, inicialmente como desenvolvedor Web (utilizando React, HTML/CSS, JS, Sass), mas hoje trabalho principalmente na área de comunicação e redes sociais.
+            Além disso, também trabalho como tradutor das entrevistas em inglês. <br> <br> <br> 
+          </p>
+        </div>
 
       <div class="project">
         <a href="https://www.instagram.com/redebonte" target="_blank">
@@ -77,39 +79,57 @@
       </div>
     </section>
 
-    <section class="skills" id="skills">
-      <div class="skill">
-        <h3>Android</h3>
-        <progress max="100" value="55"></progress>
-      </div>
-
-      <div class="skill">
-        <h3>Java</h3>
-        <progress max="100" value="70"></progress>
-      </div>
-
-      <div class="skill">
-        <h3>Kotlin</h3>
-        <progress max="100" value="50"></progress>
-      </div>
-
-      <div class="skill">
-        <h3>HTML/CSS</h3>
-        <progress max="100" value="30"></progress>
-      </div>
-
-      <div class="skill">
-        <h3>React</h3>
-        <progress max="100" value="10"></progress>
-      </div>
-
-      <div class="skill">
-        <h3>Git/Github</h3>
-        <progress max="100" value="70"></progress>
-      </div>
-
-    </section>
+    <div class="sectionTitle" id="skillsSection">
+      <h1>Skills</h1>
     </div>
+      <section class="skills" id="skills">
+        <div class="skill">
+          <h3>Android</h3>
+          <progress max="100" value="55"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Java</h3>
+          <progress max="100" value="70"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Kotlin</h3>
+          <progress max="100" value="60"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Javascript</h3>
+          <progress max="100" value="40"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>HTML/CSS</h3>
+          <progress max="100" value="40"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Firebase</h3>
+          <progress max="100" value="40"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>React</h3>
+          <progress max="100" value="20"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Node</h3>
+          <progress max="100" value="20"></progress>
+        </div>
+
+        <div class="skill">
+          <h3>Git/Github</h3>
+          <progress max="100" value="70"></progress>
+        </div>
+      </section>
+    </div>
+
     <section id="contact">
       <div class="contact">
         <a href="mailto:lrsv@cin.ufpe.br" target="_blank"><i class="fa fa-2x fa-envelope-o"></i></a>
